--- a/utlities/pages/repos.html
+++ b/utlities/pages/repos.html
@@ -12,3 +12,19 @@
     </div>
   </nav>
 </div>
+<div id="footer">
+  <ul class="nav justify-content-center">
+    <li class="nav-item">
+      <a class="nav-link active" aria-current="page" href="#">Overview</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Repos</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Projects</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Packages</a>
+    </li>
+  </ul>
+</div>
