render navbar, deleted HTML pages

--- a/index.html
+++ b/index.html
@@ -15,18 +15,7 @@
 </head>
 <body>
   <div id="profile"></div>
-  <div id="navbar"><nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
-      <div class="navbar-nav">
-        <a class="nav-link" id="overviewBtn" aria-current="page" href="#"
-          >Overview</a
-        >
-        <a class="nav-link" id="reposBtn" href="#">Repos</a>
-        <a class="nav-link" id="projectsBtn" href="#">Projects</a>
-        <a class="nav-link" id="packagesBtn" href="#">Packages</a>
-      </div>
-    </div>
-  </nav></div>
+  <div id="navbar"></div>
   <div id="app"></div>
   <div id="formDiv"></div>
   <div id="footer">
@@ -49,6 +38,5 @@
 
     <script type="module" src="main.js"></script>
   </body>
-    <script type="module" src="main.js"></script>
-  </body>
+
 </html>
