--- a/index.html
+++ b/index.html
@@ -14,41 +14,52 @@
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
-  <div id="profile"></div>
-  <div id="navbar"><nav class="navbar navbar-expand-lg bg-body-tertiary">
+<div id="navigation">
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-      <div class="navbar-nav">
-        <a class="nav-link" id="overviewBtn" aria-current="page" href="#"
-          >Overview</a
-        >
-        <a class="nav-link" id="reposBtn" href="#">Repos</a>
-        <a class="nav-link" id="projectsBtn" href="#">Projects</a>
-        <a class="nav-link" id="packagesBtn" href="#">Packages</a>
+
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" id="overviewBtn" aria-current="page" href="#">Overview</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" id="packagesBtn" href="#">Packages</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" id="reposBtn"href="#">Repos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" id="projectsBtn" href="#">Projects</a>
+          </li>
+
+        </ul>
       </div>
     </div>
-  </nav></div>
+  </nav>
+</div>
+
+  <div id="overviewPage">
+    <div id="profile">
+      <img src="images/Tommyspace.webp">
+      <h2> Tommy Space</h2>
+      <div id="socials">
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">Location</li>
+          <li class="list-group-item">Socials</li>
+          <li class="list-group-item">Github site</li>
+          </ul>
+      </div>
+    </div>
+  </div>
   <div id="app"></div>
   <div id="formDiv"></div>
-  <div id="footer">
-    <ul class="nav justify-content-center">
-      <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="#">Overview</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Repos</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Projects</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Packages</a>
-      </li>
-    </ul>
-  </div>
+  <div id="footer"></div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
-    <script type="module" src="main.js"></script>
-  </body>
     <script type="module" src="main.js"></script>
   </body>
 </html>
