worked on overview page styling is still needed

--- a/index.html
+++ b/index.html
@@ -15,10 +15,17 @@
     <link rel="stylesheet" href="main.css" />
   </head>
   <body>
-    <div id="profile"></div>
-    <div id="navbar"></div>
-    <div id="app"></div>
-    <div id="formDiv"></div>
+    <div class="container">
+      <div id="navbar"></div>
+      <div id="profile">
+      </div>
+      <div class="form-container">
+        <div id="app"></div>
+        <div id="formDiv"></div>
+      </div>
+      </div>
+    </div>
+  </div>
     <div id="footer">
     </div>
     <script
